--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "normalizr": "^2.0.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
+    "react-jsonschema-form": "^0.27.0",
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
     "redux-logger": "^2.6.1",
