--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.12.0",
     "normalizr": "^2.0.1",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
     "react-jsonschema-form": "^0.27.0",
     "redux": "^3.4.0",
-    "redux-thunk": "^2.0.1",
+    "redux-storage": "^4.0.0",
+    "redux-storage-decorator-filter": "1.1.4",
+    "redux-storage-engine-localstorage": "1.1.0",
     "redux-logger": "^2.6.1",
     "react-redux": "^4.4.2",
     "react-router": "^2.3.0",
-    "react-router-redux": "^4.0.2"
+    "react-router-redux": "^4.0.2",
+    "redux-thunk": "^2.0.1"
   }
 }
