--- a/package.json
+++ b/package.json
@@ -15,28 +15,30 @@
     "url": "https://github.com/JeffRisberg/RE08"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "file-loader": "^1.1.5",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "file-loader": "^1.1.11",
     "glob": "^7.1.2",
+    "mini-css-extract-plugin": "^0.4.1",
     "nedb": "^1.8.0",
     "react-hot-loader": "^4.3.3",
-    "webpack": "^4.15.1"
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "debug": "^3.1.0",
     "isomorphic-fetch": "^2.2.1",
-    "moment": "^2.19.2",
+    "moment": "^2.22.2",
     "normalizr": "^3.2.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router": "^3.0.5",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
