--- a/package.json
+++ b/package.json
@@ -15,20 +15,29 @@
     "url": "https://github.com/JeffRisberg/RE08"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "body-parser": "^1.20.1",
-    "express": "^4.18.2",
-    "file-loader": "^3.0.0",
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "css-loader": "^5.2.7",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.0.0",
+    "file-loader": "^6.0.0",
     "glob": "^7.2.3",
-    "mini-css-extract-plugin": "^0.12.0",
+    "husky": "^1.2.1",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^2.6.1",
     "nedb": "^1.8.0",
-    "react-hot-loader": "^4.13.0",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0"
+    "sass-loader": "^7.3.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "bootstrap": "^4.6.2",
