--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^2.6.1",
     "nedb": "^1.8.0",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^8.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "bootstrap": "^4.6.2",
     "debug": "^4.3.4",
     "isomorphic-fetch": "^3.0.0",
