--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
+    "@babel/plugin-transform-object-rest-spread": "^7.24.1",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
     "babel-eslint": "^8.2.6",
@@ -26,10 +27,10 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^19.0.0",
     "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-jsx-a11y": "^7.0.0",
-    "eslint-plugin-react": "^8.0.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.3.0",
     "file-loader": "^6.0.0",
-    "glob": "^7.2.3",
+    "glob": "^8.1.0",
     "husky": "^1.2.1",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^2.8.1",
@@ -43,6 +44,7 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^4.6.2",
     "debug": "^4.3.4",
+    "express": "^4.19.2",
     "isomorphic-fetch": "^3.0.0",
     "moment": "^2.30.1",
     "normalizr": "^3.6.2",
